2007-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* textmodes/artist.el (artist-previous-line, artist-next-line):
	* dired.el (dired-next-line, dired-previous-line):
	* progmodes/delphi.el (delphi-newline):
	* textmodes/org.el (org-columns-eval):
	Use forward-line.

	* emerge.el (emerge-setup): Use insert-buffer-substring.
	(emerge-prepare-error-list, emerge-setup-with-ancestor): Likewise.

2007-10-18  Juanma Barranquero  <lekktu@gmail.com>

	* textmodes/fill.el (fill-individual-paragraphs): Doc fix.
	(adaptive-fill-function): Doc fix.  Remove * from docstring.

2007-10-18  Tom Horsley  <tom.horsley@att.net>

	* simple.el (interprogram-paste-function): Doc fix.
	(current-kill): Accept list of strings as well
	as single string from `interprogram-paste-function'.

2007-10-18  Glenn Morris  <rgm@gnu.org>

	* ibuf-ext.el (ibuffer-saved-filter-groups): Doc fix.

2007-10-18  Drew Adams  <drew.adams@oracle.com>

	* bindings.el (mode-line-minor-mode-keymap):
	Add mouse-minor-mode-menu on mouse-1.
	(mode-line-modes): Add mouse-1 to help-echo text.
	(mouse-minor-mode-menu, minor-mode-menu-from-indicator):
	New functions.
	(mode-line-minor-mode-help): Doc fix.

2007-10-17  Juri Linkov  <juri@jurta.org>

	* textmodes/fill.el (fill-paragraph-or-region): Remove function
	at the request of RMS.
	(fill-paragraph): Change `arg' to optional `justify'.  Add interactive
	arg `region'.  Fix docstring.  At the first `or' branch add call to
	`fill-region' if it the region is active in transient-mark-mode.

	* bindings.el (esc-map): Bind M-q to fill-paragraph
	instead of fill-paragraph-or-region.

	* tutorial.el (tutorial--default-keys): Replace fill-paragraph-or-region
	with fill-paragraph.

	* textmodes/ispell.el (ispell-word): Add interactive arg `region'.
	Fix docstring.

	* indent.el (indent-for-tab-command): Change interactive spec from
	"P" to "p".  Add check for interactive arg before indenting the
	active region.
